using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class ConstValue
{
    #region 애니메이션
    public const string MoveAnim = "IsMove";
    public const string AxisX = "MoveX";
    public const string AxisY = "MoveY";
    #endregion

    public const float ShootOffset = 1.5f;
    public const int DefaultBulletCount = 1;

    public const float SplitNodeHeight = 0.5f;
}
